deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rate-limiter
  labels:
    app: rate-limiter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rate-limiter
  template:
    metadata:
      labels:
        app: rate-limiter
    spec:
      restartPolicy: Always
      containers:
      - name: ratelimiter
        image: khos2ow/ratelimiter:0.1.1
        imagePullPolicy: Always
        command:
          - "/app/ratelimiter"
        args:
           - "--rate-limit=$(RATE_LIMIT)"
           - "--rate-limit=$(RATE_LIMIT)"
           - "--rate-interval=$(RATE_INTERVAL)"
           - "--rate-timeunit=$(RATE_TIMEUNIT)"
           - "--use-redis=$(USE_REDIS)"
           - "--redis-url=$(REDIS_URL)"
           - "--redis-port=$(REDIS_PORT)"
           - "--redis-password=$(REDIS_PASSWORD)"
           - "--backend-server=$(BACKEND_SERVER)"
        ports:
        - name: http
          containerPort: 8080
        # - name: https
        #   containerPort: 8443
        #   protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 400Mi
          requests:
            cpu: 200m
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
      # volumes:
      # - name: volume-ssl
      #   secret:
      #     secretName: rate-limiter-cert
