deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rate-limiter-service
spec:
  type: NodePort
  selector:
    app: rate-limiter
  ports:
  - name: http
    port: 8080
    targetPort: http
  # - name: https
  #   port: 8443
  #   targetPort: https
